# andromeda

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  setup.py
andromeda/: agent.py  audio_capture.py  config.py  feedback.py  health.py  intent.py  main.py  messages.py  metrics.py  state_machine.py  stop_word.py  stt.py  tts.py  vad.py  wake_word.py
andromeda/tools/: __init__.py  get_datetime.py  get_latest_news.py  get_weather.py  http_client.py  knowledge_base.py  query_mongodb.py  query_postgres.py  set_timer.py  system_control.py  web_search.py
andromeda/tools/experimental/: send_telegram.py
tests/: conftest.py  test_agent.py  test_audio_capture.py  test_config.py  test_feedback.py  test_health.py  test_http_client.py  test_intent.py  test_messages.py  test_metrics.py  test_pipeline_integration.py  test_state_machine.py  test_tools.py  test_tts.py  test_vad.py  test_web_search.py
